[package]
name = "cassini"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
image = "0.25.1"
imageproc = "0.25.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shapefile = "0.6.0"
skia-safe = "0.75.0"
tiff = "0.9.1"
las = { version = "0.8", features = ["laz"] }
reqwest = { version = "=0.10.10", features = ["native-tls-vendored", "blocking"] }
